--- a/LabJavaIO/pom.xml
+++ b/LabJavaIO/pom.xml
@@ -43,6 +43,11 @@
   </build>
   <dependencies>
     <dependency>
+      <groupId>com.sun.activation</groupId>
+      <artifactId>javax.activation</artifactId>
+      <version>1.2.0</version>
+    </dependency>
+    <dependency>
       <groupId>org.glassfish.jersey.core</groupId>
       <artifactId>jersey-client</artifactId>
       <version>2.15</version>
